// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should load type for aclitem sql 1`] = `
Object {
  "aclitem": "pg_monitor=r*/pg_read_all_stats",
}
`;

exports[`Query Interface Should load type for aclitem sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "aclitem",
      "type": Object {
        "postgresType": "aclitem",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bit sql 1`] = `
Object {
  "bit": "1",
}
`;

exports[`Query Interface Should load type for bit sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bit",
      "type": Object {
        "postgresType": "bit",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for box sql 1`] = `
Object {
  "box": "(3,4),(1,2)",
}
`;

exports[`Query Interface Should load type for box sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "box",
      "type": Object {
        "postgresType": "box",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bpchar sql 1`] = `
Object {
  "bpchar": "A",
}
`;

exports[`Query Interface Should load type for bpchar sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bpchar",
      "type": Object {
        "postgresType": "bpchar",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bytea sql 1`] = `
Object {
  "bytea": Object {
    "data": Array [
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`Query Interface Should load type for bytea sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bytea",
      "type": Object {
        "postgresType": "bytea",
        "type": 0,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cid sql 1`] = `
Object {
  "cid": "1",
}
`;

exports[`Query Interface Should load type for cid sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cid",
      "type": Object {
        "postgresType": "cid",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cidr sql 1`] = `
Object {
  "cidr": "1.1.1.1/32",
}
`;

exports[`Query Interface Should load type for cidr sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cidr",
      "type": Object {
        "postgresType": "cidr",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for circle sql 1`] = `
Object {
  "circle": Object {
    "radius": 3,
    "x": 1,
    "y": 2,
  },
}
`;

exports[`Query Interface Should load type for circle sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "circle",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresType": "circle",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cstring sql 1`] = `
Object {
  "cstring": "1",
}
`;

exports[`Query Interface Should load type for cstring sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cstring",
      "type": Object {
        "postgresType": "cstring",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for daterange sql 1`] = `
Object {
  "daterange": "[2010-01-01,2010-01-02)",
}
`;

exports[`Query Interface Should load type for daterange sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "daterange",
      "type": Object {
        "postgresType": "daterange",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for inet sql 1`] = `
Object {
  "inet": "::10.2.3.4",
}
`;

exports[`Query Interface Should load type for inet sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "inet",
      "type": Object {
        "postgresType": "inet",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int2vector sql 1`] = `
Object {
  "int2vector": "1",
}
`;

exports[`Query Interface Should load type for int2vector sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int2vector",
      "type": Object {
        "postgresType": "int2vector",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int4range sql 1`] = `
Object {
  "int4range": "[1,2)",
}
`;

exports[`Query Interface Should load type for int4range sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int4range",
      "type": Object {
        "postgresType": "int4range",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int8range sql 1`] = `
Object {
  "int8range": "[1,2)",
}
`;

exports[`Query Interface Should load type for int8range sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int8range",
      "type": Object {
        "postgresType": "int8range",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for interval sql 1`] = `
Object {
  "interval": PostgresInterval {
    "days": 1,
    "hours": 1,
  },
}
`;

exports[`Query Interface Should load type for interval sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "interval",
      "type": Object {
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresType": "interval",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for line sql 1`] = `
Object {
  "line": "{1,-1,1}",
}
`;

exports[`Query Interface Should load type for line sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "line",
      "type": Object {
        "postgresType": "line",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for lseg sql 1`] = `
Object {
  "lseg": "[(1,2),(3,4)]",
}
`;

exports[`Query Interface Should load type for lseg sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "lseg",
      "type": Object {
        "postgresType": "lseg",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for macaddr sql 1`] = `
Object {
  "macaddr": "08:00:2b:01:02:03",
}
`;

exports[`Query Interface Should load type for macaddr sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "macaddr",
      "type": Object {
        "postgresType": "macaddr",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for macaddr8 sql 1`] = `
Object {
  "macaddr8": "08:00:2b:01:02:03:04:05",
}
`;

exports[`Query Interface Should load type for macaddr8 sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "macaddr8",
      "type": Object {
        "postgresType": "macaddr8",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for money sql 1`] = `
Object {
  "money": "$1.00",
}
`;

exports[`Query Interface Should load type for money sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "money",
      "type": Object {
        "postgresType": "money",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for name sql 1`] = `
Object {
  "name": "day",
}
`;

exports[`Query Interface Should load type for name sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "name",
      "type": Object {
        "postgresType": "name",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for numeric sql 1`] = `
Object {
  "numeric": "1.2",
}
`;

exports[`Query Interface Should load type for numeric sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "decimal",
      "type": Object {
        "postgresType": "decimal",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for numrange sql 1`] = `
Object {
  "numrange": "[1,2)",
}
`;

exports[`Query Interface Should load type for numrange sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "numrange",
      "type": Object {
        "postgresType": "numrange",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for path sql 1`] = `
Object {
  "path": "[(1,2),(2,3),(3,4)]",
}
`;

exports[`Query Interface Should load type for path sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "path",
      "type": Object {
        "postgresType": "path",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for pg_lsn sql 1`] = `
Object {
  "pg_lsn": "16/B374D848",
}
`;

exports[`Query Interface Should load type for pg_lsn sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "pg_lsn",
      "type": Object {
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for point sql 1`] = `
Object {
  "point": Object {
    "x": 1,
    "y": 2,
  },
}
`;

exports[`Query Interface Should load type for point sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "point",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresType": "point",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for polygon sql 1`] = `
Object {
  "polygon": "((1,2),(2,3),(1,2))",
}
`;

exports[`Query Interface Should load type for polygon sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "polygon",
      "type": Object {
        "postgresType": "polygon",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regclass sql 1`] = `
Object {
  "regclass": "1",
}
`;

exports[`Query Interface Should load type for regclass sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regclass",
      "type": Object {
        "postgresType": "regclass",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regconfig sql 1`] = `
Object {
  "regconfig": "1",
}
`;

exports[`Query Interface Should load type for regconfig sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regconfig",
      "type": Object {
        "postgresType": "regconfig",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regdictionary sql 1`] = `
Object {
  "regdictionary": "1",
}
`;

exports[`Query Interface Should load type for regdictionary sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regdictionary",
      "type": Object {
        "postgresType": "regdictionary",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regnamespace sql 1`] = `
Object {
  "regnamespace": "1",
}
`;

exports[`Query Interface Should load type for regnamespace sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regnamespace",
      "type": Object {
        "postgresType": "regnamespace",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regoper sql 1`] = `
Object {
  "regoper": "1",
}
`;

exports[`Query Interface Should load type for regoper sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regoper",
      "type": Object {
        "postgresType": "regoper",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regoperator sql 1`] = `
Object {
  "regoperator": "1",
}
`;

exports[`Query Interface Should load type for regoperator sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regoperator",
      "type": Object {
        "postgresType": "regoperator",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regproc sql 1`] = `
Object {
  "regproc": "1",
}
`;

exports[`Query Interface Should load type for regproc sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regproc",
      "type": Object {
        "postgresType": "regproc",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regprocedure sql 1`] = `
Object {
  "regprocedure": "1",
}
`;

exports[`Query Interface Should load type for regprocedure sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regprocedure",
      "type": Object {
        "postgresType": "regprocedure",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regrole sql 1`] = `
Object {
  "regrole": "1",
}
`;

exports[`Query Interface Should load type for regrole sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regrole",
      "type": Object {
        "postgresType": "regrole",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regtype sql 1`] = `
Object {
  "regtype": "1",
}
`;

exports[`Query Interface Should load type for regtype sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regtype",
      "type": Object {
        "postgresType": "regtype",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regtype sql 3`] = `
Object {
  "regtype": "1",
}
`;

exports[`Query Interface Should load type for regtype sql 4`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regtype",
      "type": Object {
        "postgresType": "regtype",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for reltime sql 1`] = `
Object {
  "reltime": "1 day",
}
`;

exports[`Query Interface Should load type for reltime sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "reltime",
      "type": Object {
        "postgresType": "reltime",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for smgr sql 1`] = `
Object {
  "smgr": "magnetic disk",
}
`;

exports[`Query Interface Should load type for smgr sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "smgr",
      "type": Object {
        "postgresType": "smgr",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for tid sql 1`] = `
Object {
  "tid": "(42,9)",
}
`;

exports[`Query Interface Should load type for tid sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "tid",
      "type": Object {
        "postgresType": "tid",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for tsrange sql 1`] = `
Object {
  "tsrange": "[\\"2010-01-01 14:30:00\\",\\"2010-01-01 15:30:00\\")",
}
`;

exports[`Query Interface Should load type for tsrange sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "tsrange",
      "type": Object {
        "postgresType": "tsrange",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for txid_snapshot sql 1`] = `
Object {
  "txid_snapshot": "10:20:10,14,15",
}
`;

exports[`Query Interface Should load type for txid_snapshot sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "txid_snapshot",
      "type": Object {
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for uuid sql 1`] = `
Object {
  "uuid": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
}
`;

exports[`Query Interface Should load type for uuid sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "uuid",
      "type": Object {
        "postgresType": "uuid",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for varbit sql 1`] = `
Object {
  "varbit": "111",
}
`;

exports[`Query Interface Should load type for varbit sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "varbit",
      "type": Object {
        "postgresType": "varbit",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for xid sql 1`] = `
Object {
  "xid": "1",
}
`;

exports[`Query Interface Should load type for xid sql 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "xid",
      "type": Object {
        "postgresType": "xid",
        "type": 2,
      },
    },
  ],
}
`;
